--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Solitaire</title>
 </head>
 
-<body onload="Solitaire.start()" onresize="Dimension.calculateAll()">
+<body onload="Solitaire.start()" onresize="Dimension.calculateAll()" oncontextmenu="return false;">
   <link rel="stylesheet" href="style.css">
   <canvas id="screen"></canvas>
   <script src="src/main/data-structures/Vector2.js"></script>
