--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script src="src/main/data-structures/Dimension.js"></script>
   <script src="src/main/Game.js"></script>
   <script src="src/main/GameWorld.js"></script>
-  <script src="src/main/Klondike.js"></script>
+  <script src="src/main/games/Klondike.js"></script>
   <script src="src/main/Card.js"></script>
   <script src="src/main/data-structures/Stack.js"></script>
 </body>
