add spider game
- Spider game added.
- Code improved.
- Documentation improved.
- Readme images updated.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="src/main/Card.js"></script>
   <script src="src/main/data-structures/Stack.js"></script>
   <script src="src/main/games/Klondike.js"></script>
+  <script src="src/main/games/Spider.js"></script>
 </body>
 
 </html>
