add pyramid game
- Pyramid game added.
- Highlight feature added.
- Readme typo corrected.
- New screenshot added.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
   <script src="src/main/GameWorld.js"></script>
   <script src="src/main/Card.js"></script>
   <script src="src/main/data-structures/Stack.js"></script>
+  <script src="src/main/data-structures/PyramidStack.js"></script>
   <script src="src/main/games/Klondike.js"></script>
   <script src="src/main/games/Spider.js"></script>
   <script src="src/main/games/Freecell.js"></script>
+  <script src="src/main/games/Pyramid.js"></script>
 </body>
 
 </html>
